# MOND-Analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ANALYSIS_SUMMARY.md  PAPER_DRAFT.md
src/: __init__.py  efe_simulation.py  eotwash_analysis.py  grace_analysis.py  mond_core.py  torsion_simulator.py
tests/: __init__.py  test_mond_core.py
